# tda-generate-token

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
app/: __main__.py
